Re-fix toolbar (shift everything over in canvas) and update dates

--- a/src/components/Canvas/Graph/style.css
+++ b/src/components/Canvas/Graph/style.css
@@ -21,11 +21,3 @@
     padding: 0px 4px;
     border-left: 1px solid #D4D4D4;
 }
-
-#graph-container {
-    margin-left: 50px;
-}
-
-#canvas {
-    margin-left: 50px;
-}
